--- a/generator.html
+++ b/generator.html
@@ -733,14 +733,14 @@
         var newCreditNumber = Number(HUDCreditNumber.innerText) - allColonies.length * 10;
         HUDCreditNumber.innerText = newCreditNumber;
         for (const pEl of allColonies) {
-          if ((pEl.population || 0) < Number(pEl.randomSize.split(" ")[1]) * 2 || pEl.satisfactoryPlanet == true) {
+          if ((pEl.population || 0) < Number(pEl.randomSize.split(" ")[1]) * 2 && pEl.satisfactoryPlanet == true) {
             var newPopNumber = pEl.population + 1;
             pEl.population = newPopNumber;
             var newAuthorityNumber = (pEl.authority || 0) + 2;
             pEl.authority = newAuthorityNumber;
             console.log("The " + pEl.biome + " World is Satisfactory and has grown by 1 Unit")
           }
-          else if ((pEl.population || 0) < Number(pEl.randomSize.split(" ")[1] * 2) || pEl.satisfactoryPlanet == false) {
+          else if ((pEl.population || 0) < Number(pEl.randomSize.split(" ")[1] * 2) && pEl.satisfactoryPlanet == false) {
             var newPopNumber = pEl.population + 1;
             pEl.population = newPopNumber;
             var newAuthorityNumber = (pEl.authority || 0) + 1;
@@ -773,4 +773,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.214--->
+<!--Version 0.215--->
