--- a/generator.html
+++ b/generator.html
@@ -651,7 +651,8 @@
         for (const pEl of planetElList) {
           var nameList = ["Riak", "Quevec", "Tolorae", "Cassentor Alpha", "Cassentor Beta", "Cassentor Gamma", "Vlaron", "Tholia Prime", "Karsaec", "Sacradia",
                           "Eclysia Alpha", "Eclysia Prime", "Trilliad", "Celium", "Piaryus", "Mazirus", "Kwevec", "D'Arthen", "Epsilon Ras", "Sherocira",
-                          "Mardilon", "Tofarian Prime", "Scieor", "Dessanu", "Zaydran", "Irsa", "Rihlac", "Saer'esr", "Vartirc", "New Beyius", "Antares"];
+                          "Mardilon", "Tofarian Prime", "Scieor", "Dessanu", "Zaydran", "Irsa", "Rihlac", "Saer'esr", "Vartirc", "New Beyius", "Antares", 
+                          "Cyleria"];
           var randomIndex = Math.floor(Math.random() * nameList.length);
           var planetName = nameList[randomIndex];
           pEl.randomName = planetName;
@@ -773,4 +774,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.215--->
+<!--Version 0.216--->
