--- a/generator.html
+++ b/generator.html
@@ -267,17 +267,17 @@
     
     <div class="preferenceMenu" id="preferenceMenu">
       <div class="preferenceCell preferenceButton1"><img id="preferenceButton1" onclick="preferPlanet(this)" src="desertplanet1.png"></img></div>
-      <div class="preferenceCell preferenceCaption1"><span id="preferenceCaption1"> Desert Planet Preference </span></div>
+      <div class="preferenceCell preferenceCaption1"><span id="preferenceCaption1"> Desert World Preference </span></div>
       <div class="preferenceCell preferenceButton2"><img id="preferenceButton2" onclick="preferPlanet(this)" src="savannaplanet1.png"></img></div>
-      <div class="preferenceCell preferenceCaption2"><span id="preferenceCaption2"> Savanna Planet Preference </span></div>
+      <div class="preferenceCell preferenceCaption2"><span id="preferenceCaption2"> Savanna World Preference </span></div>
       <div class="preferenceCell preferenceButton3"><img id="preferenceButton3" onclick="preferPlanet(this)" src="arcticplanet1.png"></img></div>
-      <div class="preferenceCell preferenceCaption3"><span id="preferenceCaption3"> Arctic Planet Preference </span></div>
+      <div class="preferenceCell preferenceCaption3"><span id="preferenceCaption3"> Arctic World Preference </span></div>
       <div class="preferenceCell preferenceButton4"><img id="preferenceButton4" onclick="preferPlanet(this)" src="tundraplanet1.png"></img></div>
-      <div class="preferenceCell preferenceCaption4"><span id="preferenceCaption4"> Tundra Planet Preference </span></div>
+      <div class="preferenceCell preferenceCaption4"><span id="preferenceCaption4"> Tundra World Preference </span></div>
       <div class="preferenceCell preferenceButton5"><img id="preferenceButton5" onclick="preferPlanet(this)" src="continentalplanet1.png"></img></div>
-      <div class="preferenceCell preferenceCaption5"><span id="preferenceCaption5"> Continental Planet Preference </span></div>
+      <div class="preferenceCell preferenceCaption5"><span id="preferenceCaption5"> Continental World Preference </span></div>
       <div class="preferenceCell preferenceButton6"><img id="preferenceButton6" onclick="preferPlanet(this)" src="oceanplanet1.png"></img></div>
-      <div class="preferenceCell preferenceCaption6"><span id="preferenceCaption6"> Ocean Planet Preference </span></div>
+      <div class="preferenceCell preferenceCaption6"><span id="preferenceCaption6"> Ocean World Preference </span></div>
     </div>
     
 
@@ -812,4 +812,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.220--->
+<!--Version 0.221--->
