--- a/generator.html
+++ b/generator.html
@@ -748,7 +748,7 @@
       }
       
       ///events
-      function executeEvent1 {
+      function executeEvent1() {
         var event1 = $("event1");
         event1.style.display = none;
         event1.parentNode.removeChild(event1);
@@ -859,4 +859,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.223--->
+<!--Version 0.224--->
