--- a/generator.html
+++ b/generator.html
@@ -833,7 +833,7 @@
         var event1 = $("event1");
         var event1Target = allMiningPlanets[1];
         var event1Randomizer = Number(Math.floor(Math.random() * 2) + 1);
-        if (event1Target !=== undefined && event1Randomizer == "1") {
+        if (event1Target !== undefined && event1Randomizer == "1") {
           event1.style.display = "inline-grid";
         }
         
@@ -859,4 +859,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.224--->
+<!--Version 0.225--->
