--- a/generator.html
+++ b/generator.html
@@ -193,7 +193,7 @@
       .eventA { 
         position:absolute; width: 270px; height: 300px; font-family: 'MedievalSharp', cursive; font-size:80%; border: 2px solid lightgray;   
         border-radius: 5px; display: none; margin: 15px; gap: 1.75px; background: #1d4b96; transition:0.4s;
-        grid-template-columns: repeat(3, 1fr); grid-auto-rows: 10px 70px 160px 50px 10px;
+        grid-template-columns: repeat(3, 1fr); grid-auto-rows: 70px 180px 50px;
         grid-template-areas:
           "EAname   EAname   EAname"
           "EAdesc   EAdesc   EAdesc"
@@ -301,12 +301,10 @@
     </div>
     
     <div class="eventA" id="event1">
-      <div class="EAcell EAtop"></div>
       <div class="Eacell EAname"><p> Mineral Theft </p></div>
       <div class="Eacell EAdesc"><span> A thief has broken into a storage warehouse on </span><span id="e1PlanetName"> [planetName] </span><span>.</span>
                                  <span> They have stolen a large amount of raw minerals recently mined from the planet. </p></div>
       <div class="EAcell EAbutton"><button id="E1button" onclick="executeEvent1()"> Unfortunate. </button></div>
-      <div class="EAcell EAbottom"></div>
     </div>
 
 
@@ -861,4 +859,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.226--->
+<!--Version 0.227--->
