--- a/generator.html
+++ b/generator.html
@@ -202,11 +202,10 @@
       
       .EAcell { background: lightgray; padding: 3px; position: relative; overflow:hidden; background:#7096cf; }
       .EAcell p { font-family: 'MedievalSharp', cursive; font-size:110%; }
-      .EAname { grid-area:EAname; text-align:left; margin-top:10px; }
+      .EAname { grid-area:EAname; text-align:center; margin-top:10px; }
       .EAname p { white-space:nowrap; font-size:200%; }
       .EAdesc { grid-area:EAdesc; text-align:center; padding:20px; }
       .EAbutton { grid-area:EAbutton; }
-      .EAtop { grid-area:top; display:none; }
       #E1button { border-radius:10%; background:slateblue; color:white; font-family:'MedievalSharp', cursive; width:250px; margin:7.5px; }
       
       #event1 { top:200px; left:450px; }
@@ -859,4 +858,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.229--->
+<!--Version 0.230--->
