--- a/generator.html
+++ b/generator.html
@@ -783,7 +783,7 @@
       }
       function generateStarbase() {
         var star = $("s1");
-        var starbase = $("passivStarbase-s1");
+        var starbase = $("passiveStarbase-s1");
         var newTop = star.offsetTop - 10;
         var newLeft = star.offsetLeft + 110;
         starbase.style.top = newTop + "px";
@@ -952,4 +952,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.245--->
+<!--Version 0.246--->
