--- a/generator.html
+++ b/generator.html
@@ -190,8 +190,8 @@
       #preferenceButton5 { border-radius:50%; background:gray; color:white; padding:2px; width:30px; height:30px; font-size:80%; }
       #preferenceButton6 { border-radius:50%; background:gray; color:white; padding:2px; width:30px; height:30px; font-size:80%; }
       
-      .passiveShip { padding:2px; }
-      .passiveStarbase { padding:2px; }
+      .passiveShip { padding:2px; position:absolute; }
+      .passiveStarbase { padding:2px; position:absolute; width:20px; height:20px; }
       #passiveCivilianShip { height:10px; width:14px; }
       
       .eventA { 
@@ -952,4 +952,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.246--->
+<!--Version 0.247--->
