--- a/generator.html
+++ b/generator.html
@@ -263,7 +263,7 @@
     </div>
     
     <img class="star" id="s1">
-      <img class="passiveStarbase" id="passiveStarbase-s1" src="miningstationicon.png" onclick="buildShip(this)"><img>
+      <img class="passiveStarbase" id="passiveStarbase-s1" src="starbaseicon.png" onclick="buildShip(this)"><img>
     </img>  
     <div id="system1">
       <img class="planet" id="p1"></img>
@@ -952,4 +952,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.247--->
+<!--Version 0.248--->
