--- a/test6.html
+++ b/test6.html
@@ -13,7 +13,7 @@
           "builderButton2 builderCaption2"
           "builderButton3 builderCaption3"  
           "builderButton4 builderCaption4"
-          "builderButton5 builderCaption5" 
+          "builderButton5 builderCaption5"; 
         gap: 1.75px; background: #1d4b96; transition:1.2s;
       }
       
@@ -60,4 +60,4 @@
     </script>
   </body>
 </html>
-<!--Version 1--->
+<!--Version 2--->
