--- a/test6.html
+++ b/test6.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-  
+    <title> Test 6 <title>
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+      
     <style>
       
       img { image-rendering:pixelated; }
