--- a/test6.html
+++ b/test6.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Test 6 <title>
+    <title> Test 6 </title>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
       
     <style>
@@ -47,19 +47,19 @@
   
     <div class="shipBuilderMenu" id="builderMenu" onclick="closeBuilderMenu">
       <div class="builderCell builderButton1"><img id="builderButton1" src="passivecorvette.png"></img></div>
-      <div class="builderCell builderCaption1"></div>
+      <div class="builderCell builderCaption1"><span> Build Corvette </span></div>
       <div class="builderCell builderButton2"><img id="builderButton2" src="passivecruiser.png"></img></div>
-      <div class="builderCell builderCaption2"></div>
+      <div class="builderCell builderCaption2"><span> Build Cruiser </span></div>
       <div class="builderCell builderButton3"<img id="builderButton3" src="passivedestroyer.png"></img>></div>
-      <div class="builderCell builderCaption3"></div>
+      <div class="builderCell builderCaption3"><span> Build Destroyer </span></div>
       <div class="builderCell builderButton4"><img id="builderButton4" src="passivedreadnaught.png"></img></div>
-      <div class="builderCell builderCaption4"></div>
+      <div class="builderCell builderCaption4"><span> Build Dreadnaught </span></div>
       <div class="builderCell builderButton5"><img id="builderButton5" src="passivetitan.png"></img></div>
-      <div class="builderCell builderCaption5"></div>
+      <div class="builderCell builderCaption5"><span> Build Titan </span></div>
     </div>
     
     <script>
     </script>
   </body>
 </html>
-<!--Version 2--->
+<!--Version 3--->
