--- a/test6.html
+++ b/test6.html
@@ -61,7 +61,7 @@
     
     <script>
       
-      function closeBuilderMenu {
+      function closeBuilderMenu() {
         var menu = document.getElementById("builderMenu");
         menu.style.display = "none";
       }
