--- a/test6.html
+++ b/test6.html
@@ -46,7 +46,7 @@
   
   <body>
   
-    <div class="shipBuilderMenu" id="builderMenu" onclick="closeBuilderMenu">
+    <div class="shipBuilderMenu" id="builderMenu" onclick="closeBuilderMenu()">
       <div class="builderCell builderButton1"><img id="builderButton1" src="passivecorvette.png"></img></div>
       <div class="builderCell builderCaption1"><span> Build Corvette </span></div>
       <div class="builderCell builderButton2"><img id="builderButton2" src="passivecruiser.png"></img></div>
@@ -69,4 +69,4 @@
     </script>
   </body>
 </html>
-<!--Version 13--->
+<!--Version 14--->
