--- a/generator.html
+++ b/generator.html
@@ -298,7 +298,7 @@
     </div>
     
     <img class="star" id="s1">
-      <img class="passiveStarbase" id="passiveStarbase-s1" src="starbaseicon.png" onmouseenter="buildShip(this)"><img>
+      <img class="passiveStarbase" id="passiveStarbase-s1" src="starbaseicon.png" onmouseenter="showBuilderMenu(this)"><img>
     </img>  
     <div id="system1">
       <img class="planet" id="p1"></img>
@@ -1017,4 +1017,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.256--->
+<!--Version 0.257--->
