--- a/generator.html
+++ b/generator.html
@@ -330,7 +330,7 @@
       <div class="designationCell designationSupplyIcon"><img id="designationSupplyIcon" src="supplyicon.png"></img></div>
     </div>
     
-    <div class="shipBuilderMenu" id="builderMenu" onclick="closeBuilderMenu()">
+    <div class="shipBuilderMenu" id="builderMenu">
       <div class="builderCell builderButton1"><img id="builderButton1" src="passivecorvette.png"></img></div>
       <div class="builderCell builderCaption1"><span> Build Corvette </span></div>
       <div class="builderCell builderButton2"><img id="builderButton2" src="passivecruiser.png"></img></div>
@@ -1026,4 +1026,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.260--->
+<!--Version 0.261--->
