--- a/generator.html
+++ b/generator.html
@@ -328,7 +328,7 @@
     </div>
 
     <div class="starbaseContainer" id="starbaseContainer">
-      <img class="passiveStarbase" id="passiveStarbase-s1" src="starbaseicon.png" onmouseenter="showBuilderMenu(this)" onmouseout="preCloseBuilderMenu(this)"><img>
+    <img class="passiveStarbase" id="passiveStarbase-s1" src="starbaseicon.png" onmouseenter="showBuilderMenu(this)" onmouseout="preCloseBuilderMenu(this)"></img>
     </div>
     
     
@@ -366,6 +366,7 @@
                                  <span> They have stolen a large amount of raw minerals recently mined from the planet. </span></div>
       <div class="EAcell EAbutton"><button id="E1button" onclick="executeEvent1()"> Unfortunate. </button></div>
     </div>
+
     <div class="eventA" id="event2" onclick="moveEvent(this)">
       <div class="Eacell EAname"><span> Nanite Swarm </span></div>
       <div class="Eacell EAdesc">
@@ -1044,4 +1045,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.264--->
+<!--Version 0.266--->
