--- a/generator.html
+++ b/generator.html
@@ -335,13 +335,13 @@
     <div class="shipBuilderMenu" id="builderMenu">
       <div class="builderCell builderButton1"><img id="builderButton1" src="passivecorvette.png" onclick="buildCorvette()"></img></div>
       <div class="builderCell builderCaption1"><span> Build Corvette </span></div>
-      <div class="builderCell builderButton2"><img id="builderButton2" src="passivecruiser.png" onclick="buildCruiser()></img></div>
+      <div class="builderCell builderButton2"><img id="builderButton2" src="passivecruiser.png" onclick="buildCruiser()"></img></div>
       <div class="builderCell builderCaption2"><span> Build Cruiser </span></div>
-      <div class="builderCell builderButton3"><img id="builderButton3" src="passivedestroyer.png" onclick="buildDestroyer()></img></div>
+      <div class="builderCell builderButton3"><img id="builderButton3" src="passivedestroyer.png" onclick="buildDestroyer()"></img></div>
       <div class="builderCell builderCaption3"><span> Build Destroyer </span></div>
-      <div class="builderCell builderButton4"><img id="builderButton4" src="passivedreadnaught.png" onclick="buildDreadnaught()></img></div>
+      <div class="builderCell builderButton4"><img id="builderButton4" src="passivedreadnaught.png" onclick="buildDreadnaught()"></img></div>
       <div class="builderCell builderCaption4"><span> Build Dreadnaught </span></div>
-      <div class="builderCell builderButton5"><img id="builderButton5" src="passivetitan.png" onclick="buildTitan()></img></div>
+      <div class="builderCell builderButton5"><img id="builderButton5" src="passivetitan.png" onclick="buildTitan()"></img></div>
       <div class="builderCell builderCaption5"><span> Build Titan </span></div>
     </div>
 
@@ -1045,4 +1045,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.266--->
+<!--Version 0.267--->
