--- a/generator.html
+++ b/generator.html
@@ -900,7 +900,7 @@
       }
       function generateStarbase() {
         var star = $("s1");
-        var starbase = $("passiveStarbase-s1");
+        var starbase = $("passiveStarbase-s1-0");
         var newTop = star.offsetTop - 20;
         var newLeft = star.offsetLeft + 105;
         starbase.style.top = newTop + "px";
@@ -1073,4 +1073,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.268--->
+<!--Version 0.269--->
