--- a/generator.html
+++ b/generator.html
@@ -882,7 +882,7 @@
       }
       function generateStarbase() {
         var star = $("s1");
-        var starbase = $("passiveStarbase-s1-0");
+        var starbase = $("passiveStarbase-s1");
         var newTop = star.offsetTop - 20;
         var newLeft = star.offsetLeft + 105;
         starbase.style.top = newTop + "px";
@@ -1055,4 +1055,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.273--->
+<!--Version 0.274--->
