--- a/generator.html
+++ b/generator.html
@@ -709,6 +709,9 @@
       
       function buildCorvette() {
         alert("you built a Corvette");
+        var starbase = $("passiveStarbase-s1");
+        var currentShipNumber = starbase.dataset.ships;
+        console.log(currentShipNumber);
       }
       function buildCruiser() {
         alert("you built a Cruiser");
@@ -1055,4 +1058,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.274--->
+<!--Version 0.275--->
