--- a/generator.html
+++ b/generator.html
@@ -709,10 +709,20 @@
       
       function buildCorvette() {
         alert("you built a Corvette");
+        var corvette = $("passiveCorvette");
+        var newCorvette = corvette.cloneNode(true);
+        var container = $("starbaseContainer");
         var starbase = $("passiveStarbase-s1");
         var currentShipNumber = starbase.dataset.ships;
         currentShipNumber = Number(currentShipNumber) + 1;
         console.log(currentShipNumber);
+        var newTop = starbase.offsetTop;
+        var newLeft = starbase.offsetLeft + 40 * currentShipNumber;
+        newCorvette.style.top = newTop + "px";
+        newCorvette.style.left = newLeft + "px";
+        newCorvette.id = newCorvette.id + "-s1-" currentShipNumber;
+        container.appendChild(newCorvette);
+        newCorvette.style.display = "block";
       }
       function buildCruiser() {
         alert("you built a Cruiser");
@@ -1059,4 +1069,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.276--->
+<!--Version 0.277--->
