--- a/generator.html
+++ b/generator.html
@@ -720,7 +720,7 @@
         var newLeft = starbase.offsetLeft + 40 * currentShipNumber;
         newCorvette.style.top = newTop + "px";
         newCorvette.style.left = newLeft + "px";
-        newCorvette.id = newCorvette.id + "-s1-" currentShipNumber;
+        newCorvette.id = newCorvette.id + "-s1-" + currentShipNumber;
         container.appendChild(newCorvette);
         newCorvette.style.display = "block";
       }
@@ -1069,4 +1069,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.277--->
+<!--Version 0.278--->
