--- a/generator.html
+++ b/generator.html
@@ -124,8 +124,8 @@
       #hostileColonyMarker {  }
       #miningStationMarker {  }
       
-      .passiveShip { padding:2px; position:absolute; background:navy; padding:0px; }
-      .passiveStarbase { padding:2px; position:absolute; width:25px; height:25px; background:gray; border-radius:50%; padding:1px; }
+      .passiveShip { position:absolute; padding:0px; }
+      .passiveStarbase { position:absolute; width:25px; height:25px; background:gray; border-radius:50%; padding:1px; }
       #passiveCivilianShip { height:24px; width:32px; }
       #passiveCorvette { height:24px; width:32px; }
       #passiveCruiser { height:24px; width:32px; }
@@ -1069,4 +1069,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.279--->
+<!--Version 0.280--->
