--- a/generator.html
+++ b/generator.html
@@ -715,7 +715,7 @@
         var starbase = $("passiveStarbase-s1");
         var currentShipNumber = starbase.dataset.ships;
         currentShipNumber = Number(currentShipNumber) + 1;
-        starbase.dataset.ships = Number(currentShipNumber) + 1;
+        starbase.dataset.ships = currentShipNumber;
         console.log(currentShipNumber);
         var newTop = starbase.offsetTop;
         var newLeft = starbase.offsetLeft + 40 * currentShipNumber;
@@ -1070,4 +1070,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.281--->
+<!--Version 0.282--->
