--- a/generator.html
+++ b/generator.html
@@ -718,7 +718,7 @@
         starbase.dataset.ships = currentShipNumber;
         console.log(currentShipNumber);
         var newTop = starbase.offsetTop;
-        var newLeft = starbase.offsetLeft + 40 * currentShipNumber;
+        var newLeft = starbase.offsetLeft + 30 + 10 * currentShipNumber;
         newCorvette.style.top = newTop + "px";
         newCorvette.style.left = newLeft + "px";
         newCorvette.id = newCorvette.id + "-s1-" + currentShipNumber;
@@ -1070,4 +1070,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.282--->
+<!--Version 0.283--->
